--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/localizations": "^1.26.16",
     "@clerk/nextjs": "^4.29.9",
+    "@clerk/upgrade": "^0.4.3",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
