--- a/package.json
+++ b/package.json
@@ -6,16 +6,20 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:studio": "npx drizzle-kit studio",
+    "db:push": "npx drizzle-kit push:pg"
   },
   "dependencies": {
     "@clerk/localizations": "^1.26.16",
     "@clerk/nextjs": "^4.29.9",
     "@clerk/upgrade": "^0.4.3",
+    "@neondatabase/serverless": "^0.9.0",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "drizzle-orm": "^0.30.4",
     "lucide-react": "^0.358.0",
     "next": "14.1.3",
     "react": "^18",
@@ -28,8 +32,11 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "dotenv": "^16.4.5",
+    "drizzle-kit": "^0.20.14",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
+    "pg": "^8.11.3",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
